# Moodify

./: .coveragerc  .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  IMPROVEMENTS.md  PROJECT_REPORT.md  QUICKSTART.md  README.md  WORKFLOW.md  app_fastapi.py  auth_helper.py  data_preprocessing.py  eda.py  fetch_playlists_and_tracks.py  get_artists_info.py  get_audio_features.py  labeled_spotify_songs.csv  main.py  mood_labeling.py  moodify_redesign_concept.html  pipeline.py  pyproject.toml  recommendations.py  requirements-core.txt  run_phase2_phase3.py  spotify_songs_cleaned.csv
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: main.py
app/static/: app.js  style.css
app/templates/: index.html
configs/: config.yaml
legacy/: README.md  app_flask_legacy.py  app_redirect.py
legacy/static/: script.js  style.css
legacy/templates/: index.html
models/item_tower/: fingerprint.pb  saved_model.pb
models/item_tower/variables/: variables.data-00000-of-00001  variables.index
notebooks/: eda.py
reports/: evaluation_sample.json  evaluation_summary.md
scripts/: check_df.py  evaluate_recommender.py  example_run.py  take_screenshots.py
src/: data_ingestion.py  preprocessing.py
src/models/: train_item_tower.py  two_tower_model.py
src/retrieval/: faiss_index.index  faiss_retriever.py  hybrid_retriever.py
src/search/: smart_search.py
tests/: test_app_utils.py  test_evaluate_recommender.py  test_hybrid_retriever.py  test_project_hygiene.py  test_smart_search.py
