[tool.poetry]
name = "moodify-hybrid-recommender"
version = "0.1.0"
description = "Hybrid Spotify-style music recommender with FAISS, smart search, and profile-aware two-tower modeling"
authors = ["Abhishek <your-email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
numpy = "^2.0"
scikit-learn = "^1.5"
plotly = "^5.24"
seaborn = "^0.13"
matplotlib = "^3.9"
tqdm = "^4.66"
python-dotenv = "^1.0"
spotipy = "^2.24"
streamlit = "^1.36"
rapidfuzz = "^3.9"
faiss-cpu = "^1.10"
pyarrow = "^17.0"
flask = "^3.0"

# Optional heavy dependencies (for ML training)
tensorflow = {version = "^2.16", optional = true}
tensorflow-recommenders = {version = "^0.7", optional = true}
mlflow = {version = "^2.15", optional = true}
dvc = {extras = ["all"], version = "^3.0", optional = true}
kaggle = {version = "^1.6", optional = true}
polars = {version = "^1.0", optional = true}

[tool.poetry.extras]
ml = ["tensorflow", "tensorflow-recommenders"]
training = ["mlflow", "dvc", "kaggle", "tensorflow", "tensorflow-recommenders"]
data = ["dvc", "kaggle", "polars"]
all = ["tensorflow", "tensorflow-recommenders", "mlflow", "dvc", "kaggle", "polars"]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0"
notebook = "^7.0"
pytest = "^8.0"
ruff = "^0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
